# hermes-os

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
docs/: README.md  action-manifest.json  adr-001-ap-task-format.md  adr-002-event-bus.md  adr-003-hermes-os-gateway-bridge.md  adr-004-circuit-breaker.md  adr-index.md  adr-template.md  architecture.md  openapi.yaml  release-checklist.md  roadmap.md
docs/command-center/: index.html
docs/contracts/: 20260625-chairman-workspace-integration-v1.yaml  20260627-ado-con-signal-provider.yaml  20260627-ado-cos-scheduler-v1.yaml
docs/sso/: contracts-index.yaml
scripts/: run_benchmarks.py  signal_provider_demo.py  start_command_center.py
src/docs/sso/: run-journal.json
src/hermes_os/: __init__.py  __main__.py  _compat.py  ap_task.py  approval_records.py  data.py  event_bus.py  llm_client.py  metrics_bridge.py  observability.py  process_adapter.py  request_schema.py  run_journal_jsonl.py  run_params_records.py  run_registry.py  step_records.py  types.py  validation.py  workflow_records.py
src/hermes_os/action_records/: __init__.py
src/hermes_os/artifact_registry/: __init__.py
src/hermes_os/command_center/: __init__.py  adapter.py  api.py
src/hermes_os/continuous_loop/: __init__.py
src/hermes_os/control_center_snapshot/: __init__.py  bridge.py
src/hermes_os/cos_runtime/: __init__.py  __main__.py  schema.py
src/pages/: TownScreen.tsx
tests/: debug_test.py  test_action_records.py  test_action_records_extended.py  test_ap_task.py  test_approval_records.py  test_artifact_registry_run_alignment.py  test_artifact_retention.py  test_artifact_signature.py  test_artifact_storage.py  test_artifact_storage_extended.py  test_auto_scheduler.py  test_base_architecture_sprint.py  test_benchmarks.py  test_bootstrap_tools.py  test_bridge.py  test_circuit_breaker.py  test_cli.py  test_cli_commands.py  test_cli_main.py  test_command_center.py  test_command_center_api.py  test_command_center_notifications.py  test_command_center_ui.py  test_continuous_loop.py  test_control_center_snapshot_extended.py  test_cos_runtime.py  test_data.py  test_decision_queue_signal_integration.py  test_event_bus.py  test_health_signal_integration.py  test_meeting_orchestrator.py  test_metrics_bridge.py  test_mvp_modules.py  test_observability.py  test_observability_dashboard.py  test_org_learning.py  test_process_adapter.py  test_process_adapter_approval.py  test_process_adapter_cancel_by_group.py  test_process_adapter_extended.py  (+20 more)
(+38 files in other folders)
