[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-os"
version = "0.1.0"
description = "Hermes OS — next-generation Agent Organization Runtime (v0.1 MVP)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_os"]

[tool.pytest.ini_options]
testpaths = ["tests"]
