[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-os"
version = "0.1.0"
description = "Hermes OS — next-generation Agent Organization Runtime (v0.1 MVP)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "aiohttp>=3.9",
]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]
bench = [
    "pytest>=8",
    "pytest-benchmark>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_os"]

[tool.pytest.ini_options]
testpaths = ["tests"]
